--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -7,12 +7,20 @@
     "default_icon": "favicon.png",
     "default_popup": "popup.html"
   },
-  "background": {
-    "scripts": [
-      "background.js"
-    ],
-    "persistent": false
-  },
+  "content_scripts": [
+    {
+      "matches": [
+        "https://piazza.com/class/*"
+      ],
+      "run_at": "document_idle",
+      "css": [
+        "contentScript.css"
+      ],
+      "js": [
+        "contentScript.js"
+      ]
+    }
+  ],
   "permissions": [
     "tabs",
     "cookies",
