--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -4,8 +4,7 @@
   "description": "Better Piazza",
   "manifest_version": 2,
   "browser_action": {
-    "default_icon": "favicon.png",
-    "default_popup": "popup.html"
+    "default_icon": "favicon.png"
   },
   "content_scripts": [
     {
@@ -21,9 +20,5 @@
       ]
     }
   ],
-  "permissions": [
-    "tabs",
-    "cookies",
-    "*://*.piazza.com/"
-  ]
+  "permissions": []
 }
