--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -6,6 +6,10 @@
   "browser_action": {
     "default_icon": "favicon.png"
   },
+  "icons": {
+    "48": "icon48.png",
+    "128": "icon128.png"
+  },
   "content_scripts": [
     {
       "matches": [
